--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="delete">删除</string>
     <string name="settings">设置</string>
     <string name="back">返回</string>
+    <string name="call">电话</string>
+    <string name="friend">朋友</string>
+    <string name="address">地址</string>
+    <string name="email">邮箱</string>
+    <string name="task">任务</string>
 </resources>
